--- a/x-pack/plugins/data_visualizer/public/application/common/components/stats_table/components/field_count_stats/_index.scss
+++ b/x-pack/plugins/data_visualizer/public/application/common/components/stats_table/components/field_count_stats/_index.scss
@@ -1,3 +1,12 @@
+.dataVisualizerFieldCountPanel {
+  margin-left: $euiSizeXS;
+  @include euiBreakpoint('xs', 's') {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
 .dataVisualizerFieldCountContainer {
   max-width: 300px;
+  min-width: 300px;
 }
