--- a/x-pack/plugins/data_visualizer/public/application/index_data_visualizer/components/search_panel/search_panel.scss
+++ b/x-pack/plugins/data_visualizer/public/application/index_data_visualizer/components/search_panel/search_panel.scss
@@ -10,4 +10,11 @@
   .dvSearchBar {
     min-width:  #{'max(100%, 500px)'};
   }
+  .dvSearchPanelControls {
+    padding: 0;
+  }
+  // prevent margin -16 which scrunches the filter bar
+  .globalFilterGroup__wrapper-isVisible {
+    margin: 0 !important;
+  }
 }
